syntax = "proto3";

// Java 包的命名空间
package com.bdsw.common;

// Go 包配置：指定生成的 Go 代码的导入路径和包名
option go_package = "github.com/bdsw/bdsw-im-ws/api/common;common";

// Java 包配置：明确指定生成的 Java 类所在的包，与开头的 package 声明一致
option java_package = 'com.bdsw.common';
//文件生成方式：为 true 时，每个消息类型都会生成独立的 Java 文件
// 如果为 false，则所有类型都会嵌套在外部类中
option java_multiple_files = true;
//外部类名：指定生成的主 Java 类名为 CommonProto
//当 java_multiple_files = false 时，所有类型都会在这个类内部定义
option java_outer_classname = "CommonProto";

// 基础响应消息
message BaseResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  int64 timestamp = 4;
}

// 分页请求
message PageRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_field = 3;
  bool sort_desc = 4;
}

// 分页响应
message PageResponse {
  int32 total = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
}

// 设备信息
message DeviceInfo {
  string device_id = 1;
  string device_type = 2;  // web, android, ios, windows, mac
  string device_brand = 3;
  string device_model = 4;
  string os_version = 5;
  string app_version = 6;
  string network_type = 7;
}

// 用户基础信息
message UserInfo {
  string user_id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  int32 status = 5;  // 用户状态
  int64 create_time = 6;
  int64 update_time = 7;
}

// 客户端上行消息
message ClientMessage {
  string message_id = 1;
  string user_id = 2;
  string type = 3;           // 消息类型：auth, sync, user, talk, team
  string action = 4;         // 动作：login, offline, sendMsg 等
  bytes data = 5;            // 业务数据（JSON格式）
  int64 timestamp = 6;
  string token = 7;
  string device_id = 8;
}

// 服务端下行消息
message ServerMessage {
  string message_id = 1;
  string type = 2;           // 消息类型
  string action = 3;         // 动作
  bytes data = 4;            // 业务数据
  int64 timestamp = 5;
  string status = 6;         // success, error
  string error_msg = 7;
}